package InputManager;

public abstract class AbstractContinueInput
{
    public abstract boolean happens();
    public abstract void Destroy();
}

